@@ -48,20 +48,20 @@ public class LocalTest {
 
 //    @Test
 //    public void testLocal() throws IOException, ConnectorException {
-////        new Story(grammar, new FileInputStream("local/dsi/jmxRcentINCollect.txt"));
-////        new Story(grammar, new FileInputStream("local/dsi/RcentDbInCollector.txt"));
-////        new Story(grammar, new FileInputStream("local/dsi/RcentDbVaCollector.txt"));
-////        new Story(grammar, new FileInputStream("local/dsi/RcentDbPpCollector.txt"));
-////        new Story(grammar, new FileInputStream("local/dsi/RcentDbPrCollector.txt"));
+////        new Story(grammar, new FileInputStream("local/dsi/jmxRCFACEINCollect.txt"));
+////        new Story(grammar, new FileInputStream("local/dsi/RCFACEDbInCollector.txt"));
+////        new Story(grammar, new FileInputStream("local/dsi/RCFACEDbVaCollector.txt"));
+////        new Story(grammar, new FileInputStream("local/dsi/RCFACEDbPpCollector.txt"));
+////        new Story(grammar, new FileInputStream("local/dsi/RCFACEDbPrCollector.txt"));
 //
-//        File file = new File("local/dsi/RcentDbReportByPushover.txt");
+//        File file = new File("local/dsi/RCFACEDbReportByPushover.txt");
 //        new Story(grammar, new FileInputStream(file), file.toPath());
 //    }
 
 //    @Test
 //    public void test2() throws FileNotFoundException {
 //        StoryGrammar grammar = new StoryGrammar(new FileInputStream("StoryGrammar.txt"));
-//        SyntaxHelper.checkSyntax(grammar.getPatternFull("COLLECTOR_JMX"), "COLLECTOR JMX WITH url=service:jmx:rmi://slv2737v.etat-de-vaud.ch:44444/jndi/rmi://slv2737v.etat-de-vaud.ch:1099/karaf-trun ,user=tadmin,password=tadmin\n" +
+//        SyntaxHelper.checkSyntax(grammar.getPatternFull("COLLECTOR_JMX"), "COLLECTOR JMX WITH url=service:jmx:rmi://src2737v.myhost:44444/jndi/rmi://src2737v.myhost:1099/karaf-trun ,user=tadmin,password=tadmin\n" +
 //                "    QUERY java.lang:type=Runtime FOR SpecName    AS JMX_LOCAL_RUNTIME_SPECNAME\n" +
 //                "    QUERY java.lang:type=Runtime FOR SpecVersion AS JMX_LOCAL_RUNTIME_SPECVERSION");
 //    }
